1.3.0 2026xxxx
CR: Settings: Switch from cmd.exe to wt.exe (Windows Terminal)

1.2.0 20250701
BF: Launcher: Correction when using custom scaling
    Correction of the possibly incorrect calculation of
    FormWindowState.Maximized for custom scaling.
CR: Platform: Optimization and corrections
    - Omission of the steps recorder (deprecated by Microsoft)
    - Simplification of the terminal action
CR: Launcher: Optimization and corrections
    - Shutdown and session ending
    - Internal communication via message bus
    - Build uses AssemblyInfo.cs for version and build number
    - Adjustment to updated platform environment variables
CR: Launcher: Added additional environment variables for the tile action
    For details, see the documentation/comments in the Settings.xml
    settings -> tiles -> tile -> environment

1.1.2 20240302
CR: Project: Updated TargetFrameworkVersion to v4.8
CR: Platform: Refactoring of the standard directory structure

1.1.1 20230710
BF: Launcher: Correction/optimization of the output if the HotKey cannot be registered
CR: Build: Releases are now only available on the release page

1.1.0 20220625
BF: Build: Correction of the release info process
BF: Launcher: Correction of the behavior when the screen resolution changes
    Triggers the update of the user interface.
CR: Launcher: Scaling of icons depending on screen resolution (aesthetic reasons)
CR: Launcher: Increase from the default value of OPACITY (95)
CR: Launcher: Added option AutoScale (default true)
    Scales the view according to the screen resolution ot the primary screen

1.0.1 20220401
BF: Build: Correction of the version number
    Release date was not set correctly.
BF: Build: Optimization of the release info process
BF: Build: Optimization of the build process

1.0.0 20220325
NT: Release is available